<resources>
    <string name="app_name" translatable="false">DeLibros</string>
    <string name="recuperar_clave" translatable="false">Recuperar Clave" </string>
    <string name="crear_cuenta" translatable="false">Crear Cuenta</string>
    <string name="buttonLogin" translatable="false">Ingresar</string>
    <string name="password" translatable="false">Contraseña</string>
    <string name="imagen_bienvenida_login" translatable="false">Imagen bienvenida</string>
    <string name="username" translatable="false">Usuario</string>
    <string name="comprar" translatable="false">Comprar</string>
    <string name="galeria" translatable="false">Galeria</string>
    <string name="buscar" translatable="false">Buscar</string>
    <string name="enviar" translatable="false">Enviar</string>
    <string name="configuracion" translatable="false">Configuration</string>
    <string name="ingresa_tu_email_para_recuperar_la_password" translatable="false">Ingresa tu email para recuperar la password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="inicio" translatable="false">Inicio</string>
    <string name="password_olvidada" translatable="false">Olvidaste tu clave</string>
    <string name="atras" translatable="false">Atrás</string>
    <string name="formatoEmail" translatable="false">tu@email.com</string>
    <string name="perfil" translatable="false">Perfil</string>
    <string name="punto_de_ubicacion" translatable="false">Punto de ubicación</string>
    <string name="mapa_de_barrios" translatable="false">Mapa de restaurantes</string>
    <string name="bienvenido" translatable="false">Bienvenido</string>
    <string name="mapa" translatable="false">Mapa</string>
    <string name="Bienvenido" translatable="false">Bienvenido 👋</string>
    <string name="favoritos" translatable="false">Favoritos</string>
    <string name="novedades_de_la_semana" translatable="false">Novedades de la semana !</string>
    <string name="siguiente"><![CDATA[>]]></string>
    <string name="anterior"><![CDATA[<]]></string>
    <string name="todo" translatable="false">TODO</string>
    <string name="preferencias" translatable="false">Todavia no tienes titulos favoritos...</string>
    <string name="lista" translatable="false">Aún no has creado ninguna lista.</string>
    <string name="mis_favoritos" translatable="false">Mis favoritos</string>
    <string name="agregar_favoritos" translatable="false">AÑADIR FAVORITOS</string>
    <string name="novedades" translatable="false">Novedades para ti</string>
    <string name="tv_home_titulo" translatable="false">Bienvenido a DeLibros</string>
    <string name="descripcion_iv_portada" translatable="false">descripcionLibro</string>
    <string name="btn_agregar_carrito" translatable="false">Comprar</string>
    <string name="title_activity_detalle_libro">Leanback DetalleLibroActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="ver_detalle_libro" translatable="false">detalle</string>
    <string name="carrusel_ofertas" translatable="false">carrusel ofertas</string>
</resources>
