<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicioFragment"
        android:icon="@drawable/ic_inicio"
        android:title="@string/inicio" />
    <item
        android:id="@+id/camaraFragment"
        android:icon="@drawable/ic_buscar"
        android:title="@string/buscar"/>
    <item
        android:id="@+id/casosFragment"
        android:icon="@drawable/ic_galeria"
        android:title="@string/galeria"/>
    <item
        android:id="@+id/configuracionFragment"
        android:icon="@drawable/ic_favoritos"
        android:title="@string/favoritos"/>
    <item
        android:id="@+id/galeriaFragment"
        android:icon="@drawable/ic_carrito"
        android:title="@string/comprar"/>
</menu>
