<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/inicioFragment">

    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.example.miprimerfragment.InicioFragment"
        android:label="@string/inicio" />

    <fragment
        android:id="@+id/favoritosFragment"
        android:name="com.example.miprimerfragment.FavoritosFragment"
        android:label="@string/favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/buscarFragment"
        android:name="com.example.miprimerfragment.BuscarFragment"
        android:label="@string/buscar" />
    <fragment
        android:id="@+id/galeriaFragment"
        android:name="com.example.miprimerfragment.GaleriaFragment"
        android:label="@string/galeria" />
    <fragment
        android:id="@+id/configuracionFragment"
        android:name="com.example.miprimerfragment.ConfiguracionFragment"
        android:label="@string/configuracion" />
    <fragment
        android:id="@+id/carritoFragment"
        android:name="com.example.miprimerfragment.CarritoFragment"
        android:label="@string/comprar" />


</navigation>