<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_large">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/size_large"
        android:layout_height="@dimen/size_large"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/todo"
        android:gravity="center_horizontal"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password_olvidada"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_titulo"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:gravity="center"
            android:text="@string/ingresa_tu_email_para_recuperar_la_password" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_descripcion"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/formatoEmail"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_enviar"
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/enviar" />

        <TextView
            android:id="@+id/btn_tv_volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_enviar"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:gravity="center"
            android:text="@string/atras" />


    </RelativeLayout>


</RelativeLayout>