<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".InicioFragment">

    <!-- Título -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mis_favoritos"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp" />

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/txtSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_large"
        android:layout_marginTop="@dimen/size_small"
        android:text="@string/preferencias"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        app:lottie_rawRes="@raw/empty_list"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />


    <!-- Mensaje -->
    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp" />

    <!-- Botón para añadir favoritos -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAgregarFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/agregar_favoritos"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginTop="24dp"
        app:cornerRadius="14dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/red" />

</LinearLayout>
