<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetalleLibroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPortada"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/descripcion_iv_portada"
            android:layout_marginBottom="16dp"
            android:padding="2dp"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="24dp" />

        <Button
            style="@style/LoginButtonStyle"
            android:id="@+id/btn_comprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comprar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_tv_volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/atras" />

    </LinearLayout>

</ScrollView>